; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/extr_nsc.c_Demux.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/extr_nsc.c_Demux.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @Demux to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Demux(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  br label %4

4:                                                ; preds = %10, %1
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i8* @vlc_stream_ReadLine(i32 %7)
  store i8* %8, i8** %3, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %4
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @ParseLine(%struct.TYPE_4__* %11, i8* %12)
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @free(i8* %14)
  br label %4

16:                                               ; preds = %4
  %17 = load i32, i32* @VLC_SUCCESS, align 4
  ret i32 %17
}

declare dso_local i8* @vlc_stream_ReadLine(i32) #1

declare dso_local i32 @ParseLine(%struct.TYPE_4__*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
